--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
-cmake_minimum_required(VERSION 3.25)
-project(sniffer)
+cmake_minimum_required(VERSION 3.7)
+project(mypr)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 11)
 
-add_executable(sniffer main.cpp)
+include(FindPCAP.cmake)
+
+set(SOURCE_FILES main.cpp)
+add_executable(mypr ${SOURCE_FILES})
+target_link_libraries(mypr ${PCAP_LIBRARY})
